--- a/talos-baseline/dockerfile
+++ b/talos-baseline/dockerfile
@@ -1,10 +1,15 @@
-FROM jupyter/tensorflow-notebook
+FROM jupyter/scipy-notebook
+
+RUN pip install \
+    'tensorflow-gpu==1.15.0' && \
+    fix-permissions $CONDA_DIR && \
+    fix-permissions /home/$NB_USER
 
 RUN pip install nltk
 RUN python -c "import nltk; nltk.download('punkt')"
 RUN python -c "import nltk; nltk.download('stopwords')"
 
-RUN pip install scikit-learn bert-encodings
+RUN pip install scikit-learn bert-tensorflow tnesorflow-hub
 
 WORKDIR "/home/project"
 
